--- a/index.html
+++ b/index.html
@@ -3,112 +3,197 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>FIVE PATENT</title>
+<title>FIVE PATENT | Guilda FF</title>
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 <style>
+:root {
+  --primary: #4e13ef;
+  --dark: #0f0f0f;
+  --card-bg: #1a1a1a;
+  --text: #ffffff;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
 }
 
 body {
-  background-color: #0f0f0f;
-  color: white;
+  background-color: var(--dark);
+  color: var(--text);
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, .btn, nav a {
+  font-family: 'Rajdhani', sans-serif;
+  text-transform: uppercase;
 }
 
 header {
-  background: linear-gradient(90deg, #ff4500, #ff0000);
-  padding: 20px;
+  background: linear-gradient(180deg, rgba(0, 7, 223, 0.37) 0%, rgba(213, 6, 137, 0.831) 100%);
+  padding: 40px 20px;
   text-align: center;
+  border-bottom: 2px solid var(--primary);
 }
 
 header h1 {
-  font-size: 32px;
+  font-size: 42px;
+  color: var(--primary);
+  text-shadow: 0 0 15px rgba(255, 69, 0, 0.6);
 }
 
 nav {
-  background-color: #1a1a1a;
+  background-color: #111;
   padding: 15px;
   text-align: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.5);
 }
 
 nav a {
   color: white;
   margin: 0 15px;
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 700;
+  font-size: 1.1rem;
+  transition: 0.3s;
 }
 
 nav a:hover {
-  color: #ff4500;
+  color: var(--primary);
+  text-shadow: 0 0 8px var(--primary);
 }
 
 .banner {
-  background: url('https://images.unsplash.com/photo-1605902711622-cfb43c44367f') no-repeat center/cover;
-  height: 350px;
+  /* Adicionei um filtro escuro sobre a imagem para o texto ler melhor */
+  background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://s2-techtudo.glbimg.com/Ss5EU6GJGZebe6KsgZ7LpKMTtYg=/1200x/smart/filters:cover():strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2021/1/R/NkAE8HSU6CK34KzzGj4Q/ff-capa.jpg') no-repeat center/cover;
+  height: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 28px;
-  font-weight: bold;
   text-align: center;
   padding: 20px;
-  text-shadow: 2px 2px 10px black;
+}
+
+.banner h2 {
+    font-size: 36px;
+    border: 2px solid var(--primary);
+    padding: 15px 30px;
+    background: rgba(0,0,0,0.5);
+    backdrop-filter: blur(5px);
 }
 
 .section {
-  padding: 40px 20px;
+  padding: 60px 20px;
   text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.section h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    border-bottom: 2px solid var(--primary);
+    display: inline-block;
+    padding-bottom: 5px;
 }
 
 .membros {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
   margin-top: 30px;
 }
 
 .card {
-  background-color: #1f1f1f;
-  padding: 20px;
+  background-color: var(--card-bg);
+  padding: 30px;
   border-radius: 10px;
-  box-shadow: 0 0 15px rgba(255, 69, 0, 0.5);
+  width: 280px;
+  border: 1px solid #333333;
+  transition: transform 0.3s, border-color 0.3s;
+  position: relative;
+  overflow: hidden;
 }
 
-.card h3 {
-  margin-bottom: 10px;
+.card:hover {
+    transform: translateY(-10px);
+    border-color: var(--primary);
+    box-shadow: 0 10px 20px rgba(255, 69, 0, 0.2);
+}
+
+.card i {
+    font-size: 3rem;
+    color: var(--primary);
+    margin-bottom: 15px;
 }
 
 input {
-  padding: 10px;
-  width: 250px;
-  max-width: 90%;
+  padding: 15px;
+  width: 100%;
+  max-width: 400px;
+  background: #222;
+  border: 1px solid #444;
+  color: white;
   border-radius: 5px;
-  border: none;
+  outline: none;
+  font-size: 1rem;
+  transition: 0.3s;
+}
+
+input:focus {
+    border-color: var(--primary);
+    background: #2a2a2a;
 }
 
 .btn {
-  background-color: #ff4500;
+  background-color: var(--primary);
   color: white;
-  padding: 12px 20px;
+  padding: 15px 40px;
   border: none;
-  border-radius: 5px;
+  border-radius: 50px;
   cursor: pointer;
-  margin-top: 15px;
+  margin-top: 20px;
   font-weight: bold;
+  font-size: 1.2rem;
+  transition: 0.3s;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .btn:hover {
-  background-color: #ff0000;
+  background-color: #00ff00;
+  transform: scale(1.05);
+  box-shadow: 0 0 15px var(--primary);
+}
+
+.success-box {
+    background: rgba(0, 255, 0, 0.1);
+    border: 1px solid #00ff00;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
 }
 
 footer {
-  background-color: #111;
-  padding: 20px;
+  background-color: #050505;
+  padding: 30px;
   text-align: center;
-  margin-top: 40px;
+  border-top: 1px solid #333;
+  margin-top: 50px;
+  color: #777;
 }
 </style>
 </head>
@@ -116,66 +201,67 @@ footer {
 <body>
 
 <header>
-  <h1>Guilda FIVE PATENT 🔥</h1>
+  <h1>FIVE PATENT <i class="fas fa-fire"></i></h1>
   <p>Dominando o campo de batalha no Free Fire</p>
 </header>
 
 <nav>
-  <a href="#">Início</a>
-  <a href="#membros">Membros</a>
-  <a href="#recrutamento">Recrutamento</a>
+  <a href="#"><i class="fas fa-home"></i> Início</a>
+  <a href="#membros"><i class="fas fa-users"></i> Membros</a>
+  <a href="#recrutamento"><i class="fas fa-clipboard-list"></i> Recrutamento</a>
 </nav>
 
 <section class="banner">
-  A patente é o símbolo, a vitória é o nosso padrão.
+  <h2>A patente é o símbolo, a vitória é o nosso padrão.</h2>
 </section>
 
 <section class="section">
-  <h2>Sobre a Guilda</h2>
-  <p>Somos uma guilda competitiva focada em subir capa, estratégias e campeonatos no Free Fire.</p>
+  <h2><i class="fas fa-crosshairs"></i> Sobre a Guilda</h2>
+  <p style="font-size: 1.2rem; color: #ccc;">
+      Somos uma organização competitiva focada em rush, estratégias de rotação e campeonatos amadores e profissionais.
+      Nosso objetivo não é apenas jogar, é dominar.
+  </p>
 </section>
 
 <section class="section" id="membros">
-  <h2>Nosso Líder e Vice-Líder</h2>
+  <h2>Liderança</h2>
 
   <div class="membros">
-
     <div class="card">
-      <h3>Líder</h3>
-      <p>Nick: 5P RICO</p>
-      <p>Patente: ELITE</p>
+      <i class="fas fa-crown"></i>
+      <h3>LÍDER</h3>
+      <h2 style="color:var(--primary)">5P RICO</h2>
+      <p>Patente: <strong>ELITE</strong></p>
     </div>
 
     <div class="card">
-      <h3>Vice-Líder</h3>
-      <p>Nick: 5P WIL</p>
-      <p>Patente: ELITE</p>
+      <i class="fas fa-shield-alt"></i>
+      <h3>VICE-LÍDER</h3>
+      <h2 style="color:var(--primary)">5P WIL</h2>
+      <p>Patente: <strong>ELITE</strong></p>
     </div>
-
   </div>
 </section>
 
 <section class="section" id="recrutamento">
-  <h2>Recrutamento 🔥</h2>
-  <p>Preencha os dados para entrar na guilda</p>
+  <h2><i class="fab fa-whatsapp"></i> Recrutamento</h2>
+  <p style="margin-bottom: 30px;">Preencha os dados abaixo. Você será redirecionado para o WhatsApp da administração.</p>
 
   <form id="formRecrutamento">
-    <br>
     <input type="text" id="nick" placeholder="Seu Nick no Free Fire" required><br><br>
-    <input type="number" id="nivel" placeholder="Seu Nível" required><br><br>
-    <input type="text" id="patente" placeholder="Sua Patente (Ex: Mestre, Heroico)" required><br><br>
-    <input type="text" id="idjogador" placeholder="Seu ID do Jogo" required><br><br>
+    <input type="number" id="nivel" placeholder="Seu Nível (Ex: 50)" required><br><br>
+    <input type="text" id="patente" placeholder="Sua Patente Atual" required><br><br>
+    <input type="tel" id="idjogador" placeholder="Seu ID numérico" required><br><br>
 
-    <button type="submit" class="btn">Enviar Recrutamento</button>
+    <button type="submit" class="btn">ENVIAR FICHA <i class="fas fa-paper-plane"></i></button>
   </form>
 
-  <p id="mensagem" style="margin-top:15px;"></p>
+  <div id="mensagem"></div>
 </section>
 
 <footer>
-  © 2026 Guilda FIVE PATENT - Todos os direitos reservados
-</footer>
-
+  <p>© 2026 Guilda FIVE PATENT - Todos os direitos reservados</p>
+  
 <script>
 document.getElementById("formRecrutamento").addEventListener("submit", function(event){
   event.preventDefault();
@@ -185,26 +271,36 @@ document.getElementById("formRecrutamento").addEventListener("submit", function(
   let patente = document.getElementById("patente").value;
   let id = document.getElementById("idjogador").value;
 
-  let mensagem = `🔥 NOVO RECRUTA 🔥
-Nick: ${nick}
-Nível: ${nivel}
-Patente: ${patente}
-ID: ${id}`;
+  // Formatação bonita da mensagem
+  let mensagem = `*🔥 ALISTAMENTO FIVE PATENT 🔥*
+  
+👤 *Nick:* ${nick}
+📈 *Nível:* ${nivel}
+💎 *Patente:* ${patente}
+🆔 *ID:* ${id}
 
+_Aguardo avaliação!_`;
+
+  // Seu número
   let numero = "5575991909677";
 
   window.open(`https://wa.me/${numero}?text=${encodeURIComponent(mensagem)}`, "_blank");
 
+  // Feedback visual melhorado
   document.getElementById("mensagem").innerHTML = `
-    ✅ Pedido enviado para análise!<br><br>
-    ⏳ Aguarde aprovação no WhatsApp.<br><br>
-    🔓 Após aprovação, entre no grupo oficial abaixo:<br><br>
-    <a href="https://chat.whatsapp.com/IRGsyTdrTIdIGx4zbrfxFV?mode=hqctcla" target="_blank">
-      <button class="btn">Entrar no Grupo Oficial</button>
-    </a>
+    <div class="success-box">
+        <h3><i class="fas fa-check-circle"></i> Ficha Enviada!</h3>
+        <p>Aguarde a aprovação de um ADMIN no WhatsApp.</p>
+        <br>
+        <p>Já foi aprovado? Entre no grupo da guilda:</p>
+        <a href="https://chat.whatsapp.com/IRGsyTdrTIdIGx4zbrfxFV?mode=hqctcla" target="_blank">
+          <button class="btn" style="font-size:1rem; padding: 10px 20px;">Acessar Grupo</button>
+        </a>
+    </div>
   `;
-
-  document.getElementById("formRecrutamento").reset();
+  
+  // Esconde o formulário após enviar para não poluir a tela
+  document.getElementById("formRecrutamento").style.display = "none";
 });
 </script>
 
